--- a/OnlinePortfolio/templates/About.html
+++ b/OnlinePortfolio/templates/About.html
@@ -28,95 +28,94 @@
     
   </section>
 
-  <section class="interests">
-    <div class="bgk-cardcolor">
-      <div class="container">
-        <div class="section-title">
-          <h2>Interests</h2>
-        </div>
-        <div class="row">
-          <div class="col-lg-3 col-md-4">
-            <div class="icon-box">
-              <i class="ri-store-line"></i>
-              <h3>Online Games</h3>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
-            <div class="icon-box">
-              <i class="ri-bar-chart-box-line"></i>
-              <h3>Food</h3>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
-            <div class="icon-box">
-              <i class="ri-bar-chart-box-line"></i>
-              <h3>Sports</h3>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
-            <div class="icon-box">
-              <i class="ri-bar-chart-box-line"></i>
-              <h3>Anime</h3>
-            </div>
-          </div>
-          
-          <!-- End of repeat block -->
-        </div>
-      </div>
-    </div>
-  </section>
-
   <div class="bgk-cardcolor2">
     <section class="skills">
       <h3 class="skills-title">My Skills</h3>
-      <div class="row">
-          <div class="col-md-6">
-              <ul class="skills-list">
-                <li class="skill-item">
-                  <div class="title">
-                      <h5>HTML & CSS</h5>
-                      <data value="60">2 years of Experience</data>
-                  </div>
-                  <div class="progress-bg">
-                      <div class="progress-fill" style="width: 60%;"></div>
-                  </div>
-                </li>
-
-                <li class="skill-item">
-                  <div class="title">
-                      <h5>PHP & PYTHON</h5>
-                      <data value="60">2 years of Experience</data>
-                  </div>
-                  <div class="progress-bg">
-                      <div class="progress-fill" style="width: 60%;"></div>
-                  </div>
-                </li>
-                 
-              </ul>
+      <div class="content-skill">
+        <div class="row">
+          <div class="col-sm-2">
+            <div class="skill-card">
+              <box-icon color="white">
+                <i class='bx bxl-html5 bx-lg bx skill-logo'></i>
+              </box-icon>
+              <span class="skill-name">HTML</span>
+            </div>
           </div>
-          <div class="col-md-6">
-              <ul class="skills-list">
-                <li class="skill-item">
-                  <div class="title">
-                      <h5>PHOTOSHOP / CANVA</h5>
-                      <data value="60">2 years of Experience</data>
-                  </div>
-                  <div class="progress-bg">
-                      <div class="progress-fill" style="width: 60%;"></div>
-                  </div>
-                </li>
-                <li class="skill-item">
-                  <div class="title">
-                      <h5>BASIC NETWORKING</h5>
-                      <data value="40">2 Semester</data>
-                  </div>
-                  <div class="progress-bg">
-                      <div class="progress-fill" style="width: 40%;"></div>
-                  </div>
-                </li>
-              </ul>
+          <div class="col-sm-2">
+            <div class="skill-card">
+              <i class='bx bxl-css3 bx-lg skill-logo'></i>
+              <span class="skill-name">CSS</span>
+            </div>
           </div>
+          <div class="col-sm-2">
+            <div class="skill-card">
+              <i class='bx bxl-javascript bx-lg skill-logo'></i>
+              <span class="skill-name">JavaScript</span>
+            </div>
+          </div>
+          <div class="col-sm-2">
+            <div class="skill-card">
+              <i class='bx bxl-react bx-lg skill-logo'></i>
+              <span class="skill-name">React</span>
+            </div>
+          </div>
+          <div class="col-sm-2">
+            <div class="skill-card">
+              <i class='bx bxl-tailwind-css bx-lg skill-logo'></i>
+              <span class="skill-name">Tailwind CSS</span>
+            </div>
+          </div>
+          <div class="col-sm-2">
+            <div class="skill-card">
+              <i class='bx bxl-python bx-lg skill-logo'></i>
+              <span class="skill-name">Python</span>
+            </div>
+          </div>
+          <div class="col-sm-2">
+            <div class="skill-card">
+              <i class='bx bxl-java bx-lg skill-logo'></i>
+              <span class="skill-name">Java</span>
+            </div>
+          </div>
+          
+          <div class="col-sm-2">
+            <div class="skill-card">
+              <i class='bx bxl-mongodb bx-lg skill-logo'></i>
+              <span class="skill-name">MongoDB</span>
+            </div>
+          </div>
+          
+          <div class="col-sm-2">
+            <div class="skill-card">
+              <i class='bx bxl-nodejs bx-lg skill-logo'></i>
+              <span class="skill-name">NodeJS</span>
+            </div>
+          </div>
+          
+          <div class="col-sm-2">
+            <div class="skill-card">
+              <i class='bx bxl-flutter bx-lg skill-logo'></i>
+              <span class="skill-name">Flutter</span>
+            </div>
+          </div>
+          
+          <div class="col-sm-2">
+            <div class="skill-card">
+              <i class='bx bxl-java bx-lg skill-logo'></i>
+              <span class="skill-name">Java</span>
+            </div>
+          </div>
+          
+          <div class="col-sm-2">
+            <div class="skill-card">
+              <i class='bx bxl-android bx-lg skill-logo'></i>
+              <span class="skill-name">Kotlin</span>
+            </div>
+          </div>
+          
+        </div>
       </div>
+      
     </section>
   </div>
   
