--- a/OnlinePortfolio/templates/home.html
+++ b/OnlinePortfolio/templates/home.html
@@ -77,7 +77,7 @@
               <div class="card">
                 <img class="card-img-top" src="media/project.jpg" alt="Card image cap">
                 <div class="card-body">
-                  <a class="nav-link" href="#about">PROJECT</a>
+                  <a class="nav-link" href="#project">PROJECT</a>
                 </div>
               </div>
             </div>
@@ -85,7 +85,7 @@
               <div class="card">
                 <img class="card-img-top" src="media/gallery.jpg" alt="Card image cap">
                 <div class="card-body">
-                  <a class="nav-link" href="#about">GALLERY</a>
+                  <a class="nav-link" href="#gallery">GALLERY</a>
                 </div>
               </div>
             </div>
