--- a/OnlinePortfolio/templates/project.html
+++ b/OnlinePortfolio/templates/project.html
@@ -1,3 +1,4 @@
+<section id="project">
 <div class="row justify-content-center">
   <div class="col-lg-6 align-self-center header-project"> 
     <h1>Project Short header</h1>
@@ -46,4 +47,6 @@
     </div>
   </div>
 </div>
+
+</section>
 
