--- a/OnlinePortfolio/static/css/main.css
+++ b/OnlinePortfolio/static/css/main.css
@@ -1,114 +1,488 @@
-.thebody {
-  background-color: #111111;
-  font-family: 'Montserrat';
 
-}
-
-.bgk-cardcolor{
-  padding: 5px;
-  background-color: #292929;
-  margin: 50px 50px 55px 50px; 
-  border-radius: 25px
-  
+html, body {
+  font-family: "Montserrat", sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f2f2f2; /* Light grey background color */
+  color: #333333; /* Dark grey text color */
 }
 
 
-.profile-text h1{
-  font-size: 30px;
-  padding-bottom: 10px;
-  text-align: center;
-}
-
-.profile-text h1 a{
-  color: white;
-  
-}
-
-.profile-text h2{
-  font-size: 20px;
-  color: white;
-  padding-bottom: 10px;
-  text-align: center;
-}
-
-.btn-group{
-  width: 100%;
-  justify-items: center;
+:root {
+  --color-bg1: #240046; /* Dark purple background */
+  --color-bg2: #000052; /* Dark blue background */
+  --color1: 18, 113, 255;
+  --color2: 221, 74, 255;
+  --color3: 100, 220, 255;
+  --color4: 200, 50, 50;
+  --color5: 180, 180, 50;
+  --color-interactive: 140, 100, 255;
+  --circle-size: 80%;
+  --blending: overlay; /* Adjusted blending mode */
 }
 
 
-.btn-group button{
-  padding: 5px 5px;
-  align-items: center;
+@keyframes moveInCircle {
+  0% {
+    transform: rotate(0deg);
+  }
+  50% {
+    transform: rotate(180deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
-.btn-primary {
-  margin-left: 10px;
-  font-size: 20px;
-  background-color: grey !important;
-  border: none;
+@keyframes moveVertical {
+  0% {
+    transform: translateY(-50%);
+  }
+  50% {
+    transform: translateY(50%);
+  }
+  100% {
+    transform: translateY(-50%);
+  }
 }
 
-.btn-primary:hover {
-  background-color: white;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+@keyframes moveHorizontal {
+  0% {
+    transform: translateX(-50%) translateY(-10%);
+  }
+  50% {
+    transform: translateX(50%) translateY(10%);
+  }
+  100% {
+    transform: translateX(-50%) translateY(-10%);
+  }
 }
 
-/* Body */
+.gradient-bg {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  overflow: hidden;
+  background: linear-gradient(40deg, var(--color-bg1), var(--color-bg2));
+  top: 0;
+  left: 0;
+  margin: 0; /* Add this to remove any default margin */
+  padding: 0; /* Add this to remove any default padding */
 
-body {
-  font-family: 'Montserrat';
-  background-color: black;
-  color: white;
+
+  svg {
+    display: none;
+  }
+
+  .gradients-container {
+    filter: url(#goo) blur(40px) ;
+    width: 100%;
+    height: 100%;
+  }
+
+  .g1 {
+    position: absolute;
+    background: radial-gradient(circle at center, rgba(var(--color1), 0.8) 0, rgba(var(--color1), 0) 50%) no-repeat;
+    mix-blend-mode: var(--blending);
+    width: var(--circle-size);
+    height: var(--circle-size);
+    top: calc(50% - var(--circle-size) / 2);
+    left: calc(50% - var(--circle-size) / 2);
+    transform-origin: center center;
+    animation: moveVertical 30s ease infinite;
+    opacity: 1;
+  }
+
+  .g2 {
+    position: absolute;
+    background: radial-gradient(circle at center, rgba(var(--color2), 0.8) 0, rgba(var(--color2), 0) 50%) no-repeat;
+    mix-blend-mode: var(--blending);
+    width: var(--circle-size);
+    height: var(--circle-size);
+    top: calc(50% - var(--circle-size) / 2);
+    left: calc(50% - var(--circle-size) / 2);
+    transform-origin: calc(50% - 400px);
+    animation: moveInCircle 20s reverse infinite;
+    opacity: 1;
+  }
+
+  .g3 {
+    position: absolute;
+    background: radial-gradient(circle at center, rgba(var(--color3), 0.8) 0, rgba(var(--color3), 0) 50%) no-repeat;
+    mix-blend-mode: var(--blending);
+    width: var(--circle-size);
+    height: var(--circle-size);
+    top: calc(50% - var(--circle-size) / 2 + 200px);
+    left: calc(50% - var(--circle-size) / 2 - 500px);
+    transform-origin: calc(50% + 400px);
+    animation: moveInCircle 20s linear infinite;
+    opacity: 1;
+  }
+
+  .g4 {
+    position: absolute;
+    background: radial-gradient(circle at center, rgba(var(--color4), 0.8) 0, rgba(var(--color4), 0) 50%) no-repeat;
+    mix-blend-mode: var(--blending);
+    width: var(--circle-size);
+    height: var(--circle-size);
+    top: calc(50% - var(--circle-size) / 2);
+    left: calc(50% - var(--circle-size) / 2);
+    transform-origin: calc(50% - 200px);
+    animation: moveHorizontal 20s ease infinite;
+    opacity: 0.7;
+  }
+
+  .g5 {
+    position: absolute;
+    background: radial-gradient(circle at center, rgba(var(--color5), 0.8) 0, rgba(var(--color5), 0) 50%) no-repeat;
+    mix-blend-mode: var(--blending);
+    width: calc(var(--circle-size) * 2);
+    height: calc(var(--circle-size) * 2);
+    top: calc(50% - var(--circle-size));
+    left: calc(50% - var(--circle-size));
+    transform-origin: calc(50% - 800px) calc(50% + 200px);
+    animation: moveInCircle 20s ease infinite;
+    opacity: 1;
+  }
+
+  .interactive {
+    position: absolute;
+    background: radial-gradient(circle at center, rgba(var(--color-interactive), 0.8) 0, rgba(var(--color-interactive), 0) 50%) no-repeat;
+    mix-blend-mode: var(--blending);
+    width: 100%;
+    height: 100%;
+    top: -50%;
+    left: -50%;
+    opacity: 0.7;
+  }
 }
 
-.container1 {
-  margin-top: 20px; 
-  margin-bottom: 20px;
-  margin-left: 50px;
-  margin-right: 50px;
-  border-radius: 25px
-  border 2px;
-  border-radius: 25px
-  
+.gradient-bg .g1,
+.gradient-bg .g2,
+.gradient-bg .g3,
+.gradient-bg .g4,
+.gradient-bg .g5,
+.gradient-bg .interactive {
+  mix-blend-mode: overlay; /* Apply overlay mix-blend-mode for light colors */
 }
 
-.card {
-  width: auto;
-  height: auto;
-  margin-bottom: 20px; 
-}
-
-.card-img-top {
-  max-height: auto; 
-}
-
-.card-body {
-  text-align: center; 
-}
-
-.card-body a{
+.text-container1 {
+  z-index: 100;
+  width: 100vw;
+  height: 100vh;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
+  top: 0;
+  left: 0;
+  padding: 25px 50px;
+}
+
+#header {
+position: relative;
+height: 100vh;
+display: flex;
+align-items: center;
+z-index: 1000;
+overflow-y: auto;
+}
+
+#header h1 {
+font-size: 48px;
+margin: 0;
+padding: 0;
+line-height: 1;
+font-weight: 700;
+padding-top: 150px;
+}
+
+#header h1 a,
+#header h1 a:hover {
+color: #fff;
+line-height: 1;
+display: inline-block;
+}
+
+#header h2 {
+font-size: 24px;
+margin-top: 20px;
+color: rgba(255, 255, 255, 0.8);
+}
+
+#header h2 span {
+color: #fff;
+border-bottom: 2px solid #18d26e;
+padding-bottom: 6px;
+}
+
+#header img {
+padding: 0;
+margin: 0;
+}
+
+#header .social-links {
+margin-top: 40px;
+display: flex;
+}
+
+#header .social-links a {
+font-size: 16px;
+display: flex;
+justify-content: center;
+align-items: center;
+background: rgba(255, 255, 255, 0.1);
+color: #fff;
+line-height: 1;
+margin-right: 8px;
+border-radius: 50%;
+width: 40px;
+height: 40px;
+}
+
+#header .social-links a:hover {
+background: #18d26e;
+}
+
+@media (max-width: 992px) {
+#header h1 {
+  font-size: 36px;
+}
+
+#header h2 {
   font-size: 20px;
-  font-weight: bold;
+  line-height: 30px;
 }
 
-.card-body a:hover{
-  color: #efd279;
+#header .social-links {
+  margin-top: 15px;
+}
+
+#header .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 100%;
+}
 }
 
 
-.btn-primary{
-  padding-top: 30px;
+#header.header-top .social-links,
+#header.header-top h2 {
+display: none;
+}
+
+#header.header-top h1 {
+margin-right: auto;
+font-size: 36px;
+}
+
+#header.header-top img {
+max-height: 60px;
+margin-right: 20px !important;
+}
+
+#header.header-top .container {
+display: flex;
+align-items: center;
+}
+
+#header.header-top .navbar {
+margin: 0;
+}
+
+@media (max-width: 768px) {
+#header.header-top {
+  height: 60px;
+}
+
+#header.header-top h1 {
+  font-size: 26px;
+}
+}
+
+/*Nav bar*/
+
+.navbar {
+padding: 0;
+margin-top: 35px;
+}
+
+.navbar ul {
+margin: 0;
+padding: 0;
+display: flex;
+list-style: none;
+align-items: center;
+}
+
+.navbar li {
+position: relative;
+}
+
+.navbar li+li {
+margin-left: 30px;
+}
+
+.navbar a,
+.navbar a:focus {
+display: flex;
+align-items: center;
+justify-content: space-between;
+padding: 0;
+font-family: "Montserrat", sans-serif;
+font-size: 16px;
+font-weight: 400;
+color: rgba(255, 255, 255, 0.7);
+white-space: nowrap;
+}
+
+.navbar a i,
+.navbar a:focus i {
+font-size: 12px;
+line-height: 0;
+margin-left: 5px;
+}
+
+.navbar a:before {
+content: "";
+position: absolute;
+width: 0;
+height: 2px;
+bottom: -4px;
+left: 0;
+background-color: #18d26e;
+visibility: hidden;
+width: 0px;
+
+}
+
+.navbar a:hover:before,
+.navbar li:hover>a:before,
+.navbar .active:before {
+visibility: visible;
+width: 25px;
+}
+
+.navbar a:hover,
+.navbar .active,
+.navbar .active:focus,
+.navbar li:hover>a {
+color: #fff;
+}
+
+/**
+* Mobile Navigation 
+*/
+.mobile-nav-toggle {
+color: #fff;
+font-size: 28px;
+cursor: pointer;
+display: none;
+line-height: 0;
+position: fixed;
+right: 15px;
+top: 15px;
+}
+
+@media (max-width: 991px) {
+.mobile-nav-toggle {
+  display: block;
+}
+
+.navbar ul {
+  display: none;
+}
+}
+
+.navbar-mobile {
+position: fixed;
+overflow: hidden;
+top: 0;
+right: 0;
+left: 0;
+bottom: 0;
+background: rgba(0, 0, 0, 0.9);
+z-index: 999;
+margin-top: 0;
+}
+
+.navbar-mobile .mobile-nav-toggle {
+position: absolute;
+top: 15px;
+right: 15px;
+}
+
+.navbar-mobile ul {
+display: block;
+position: absolute;
+top: 55px;
+right: 15px;
+bottom: 45px;
+left: 15px;
+padding: 10px 0;
+overflow-y: auto;
+border: 2px solid rgba(255, 255, 255, 0.2);
+}
+
+.navbar-mobile li {
+padding: 12px 20px;
+}
+
+.navbar-mobile li+li {
+margin: 0;
+}
+
+.navbar-mobile a,
+.navbar-mobile a:focus {
+font-size: 16px;
+position: relative;
 }
 
 
 
-/* About Me Section */
+.sidebar {
+position: fixed; /* Fix position to the viewport */
+top: 50%; /* Place the sidebar at the vertical center of the screen */
+padding: 20px; /* Add padding for better spacing */
+background-color: transparent; /* Sidebar background color */
+box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Add shadow for better visibility */
+z-index: 1000; /* Ensure the sidebar is above other content */
+overflow-y: auto; /* Enable vertical scrolling if content exceeds height */
+
+}
+
+.scrollable-content {
+margin-left: 80px; /* Add margin to create space between the sidebar and scrollable content */
+padding: 20px; /* Add padding for better spacing */
+overflow-y: auto; /* Enable vertical scrolling if content exceeds height */
+}
+
+/* Additional styles for sidebar content */
+.container {
+width: 100%; /* Ensure container fills the sidebar */
+}
+
+/* Additional styles for main content */
+.col {
+padding-left: 270px; /* Add padding to the right of sidebar */
+}
+
+/* Example styling for description paragraphs */
+p {
+font-size: 20px;
+color: white;
+}
+
+.card-details{
+box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+color: white;
+text-align: center;
+}
+
+.card-details p{
+font-size: 15px;
+}
+
+
+/* about */
 
 .about-me {
   margin-bottom: 50px;
@@ -158,8 +532,8 @@ body {
 /* SKill Section*/
 
 .bgk-cardcolor2 {
-  background-color: #292929;
-  border: 2px solid; /* Added 'solid' for border style */
+  background-color: transparent;
+  border: 2px solid yellow; /* Added 'solid' for border style */
   border-radius: 25px;
 }
 
@@ -220,19 +594,53 @@ body {
   align-items: center;
 }
 
-@media (max-width: 768px) {
-  .col-sm-2 {
-    flex: 0 0 calc(50% - 20px); /* Adjusted width to occupy 50% of the container */
-    max-width: calc(50% - 20px); /* Added max-width to prevent overflow */
+/* Laptop View */
+@media (max-width: 1024px) {
+  .col-md-6 {
+    width: 50%; /* Adjusted width to occupy 50% of the container */
+    padding: 0 10px; /* Reduced padding for better spacing */
   }
 }
+
+/* Tablet View */
+@media (max-width: 768px) {
+  .col-md-6 {
+    width: 100%; /* Set width to 100% for full width on tablets */
+    padding: 0 10px; /* Reduced padding for better spacing */
+  }
+
+  .content-skill {
+    padding-left: 10px; /* Adjusted left padding for better alignment */
+    padding-right: 10px; /* Adjusted right padding for better alignment */
+  }
+}
+
+/* Phone View */
+@media (max-width: 576px) {
+  .col-md-6 {
+    width: 100%; /* Set width to 100% for full width on phones */
+    padding: 0 5px; /* Reduced padding for better spacing */
+  }
+
+  .content-skill {
+    padding-left: 5px; /* Adjusted left padding for better alignment */
+    padding-right: 5px; /* Adjusted right padding for better alignment */
+  }
+  
+  .skills-title {
+    font-size: 24px; /* Reduced font size for smaller screens */
+    padding-left: 15px; /* Adjusted left padding for better alignment */
+    padding-top: 5px; /* Reduced top padding for better alignment */
+  }
+}
+
 
 .skill-card {
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 10px;
-  background-color: #333; /* Background color for the card */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
   border-radius: 5px;
   margin: 5px;
 }
@@ -246,127 +654,97 @@ body {
   color: white; /* Color of the skill name */
 }
 
-
-/* resume */
-.resume-section {
-  padding: 35px 0;
+.service-title{
+  color: white;
+  padding-top: 50px;
 }
 
-.resume-background {
-  background-color: #ddd;
-  margin: 1px 50px;
+
+/* RESUMEEEE */
+.resume .section-title{
+  color: white;
+  padding-top: 30px;
 }
 
-.section-heading h2 {
-  font-size: 36px;
-  font-weight: bold;
-  color: #333;
+.resume .resume-title {
+  font-size: 26px;
+  font-weight: 700;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  color: #fff;
 }
 
-.section-heading p {
+.resume .resume-item {
+  padding: 0 0 20px 20px;
+  margin-top: -2px;
+  border-left: 2px solid rgba(255, 255, 255, 0.2);
+  position: relative;
+  color: white;
+}
+
+.resume .resume-item h4 {
+  line-height: 18px;
   font-size: 18px;
-  color: black;
+  font-weight: 600;
+  text-transform: uppercase;
+  font-family: "Poppins", sans-serif;
+  color: #18d26e;
+  margin-bottom: 10px;
 }
 
-.resume-content {
-  margin-bottom: 30px;
-}
-
-.section-title {
-  font-size: 24px;
-  font-weight: bold;
-  color: #333;
-}
-
-.resume-content h4 {
-  font-size: 20px;
-  font-weight: bold;
-  color: #333;
-}
-
-.resume-content h5 {
-  font-size: 18px;
-  font-weight: bold;
-  color: #555;
-}
-
-.resume-content p {
+.resume .resume-item h5 {
   font-size: 16px;
-  color: #777;
+  background: rgba(255, 255, 255, 0.15);
+  border-radius: 13px;
+  padding: 5px 15px;
+  display: inline-block;
+  font-weight: 600;
+  margin-bottom: 10px;
 }
 
-.resume-content ul {
-  margin-top: 10px;
+.resume .resume-item ul {
   padding-left: 20px;
 }
 
-.resume-content ul li {
-  font-size: 16px;
-  color: #777;
+.resume .resume-item ul li {
+  padding-bottom: 10px;
 }
 
-/* SER */
+.resume .resume-item:last-child {
+  padding-bottom: 0;
+}
 
-.service-heading h2{
+.resume .resume-item::before {
+  content: "";
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  border-radius: 50px;
+  left: -9px;
+  top: 0;
+  background: lightblue;
+  border: 2px solid lightblue;
+}
+
+
+.general_btn {
+  background-color: transparent; /* Green */
   color: white;
-  font-size: 32px;
-  margin-bottom: 20px;
-}
-
-.service-heading p{
-  font-size: 18px;
-  color: white;
-}
-
-
-.card-body-service {
+  padding: 10px 20px; /* Add some padding */
   text-align: center;
-  padding: 5px;
-}
-
-.btn-service {
   display: inline-block;
-  padding: 10px 20px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  text-decoration: none;
-  background-color: #777;
+  font-size: 16px;
+  margin: 4px 2px;
+  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.5);
+}
+
+  /* Change color on hover */
+  .general_btn:hover {
+    background-color: #45a049;
+}
+
+.general_btn:hover a {
+  background-color: #45a049;
   color: white;
 }
 
-.btn-service:hover {
-  background-color: #f0f0f0;
-}
-
-
-/* project pagodddd nakoooo */
-
-/* Style the text to be white */
-.header-project h1,
-.header-project p{
-  color: white;
-}
-
-/* Make the last card bigger */
-.card:last-child {
-  height: 300px; /* Adjust the height as needed */
-}
-
-/* Ensure the card fills its parent container */
-.card-project {
-  height: 100%;
-}
-
-/* Center the text vertically within the card */
-.card-body {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-@media (max-width: 992px) {
-  /* Adjust card height for responsiveness */
-  .card:last-child {
-    height: auto;
-  }
-}
