--- a/OnlinePortfolio/static/css/main.css
+++ b/OnlinePortfolio/static/css/main.css
@@ -194,12 +194,6 @@ font-weight: 700;
 padding-top: 150px;
 }
 
-#header h1 a,
-#header h1 a:hover {
-color: #fff;
-line-height: 1;
-display: inline-block;
-}
 
 #header h2 {
 font-size: 24px;
@@ -213,10 +207,6 @@ border-bottom: 2px solid #18d26e;
 padding-bottom: 6px;
 }
 
-#header img {
-padding: 0;
-margin: 0;
-}
 
 #header .social-links {
 margin-top: 40px;
@@ -298,145 +288,6 @@ margin: 0;
 }
 }
 
-/*Nav bar*/
-
-.navbar {
-padding: 0;
-margin-top: 35px;
-}
-
-.navbar ul {
-margin: 0;
-padding: 0;
-display: flex;
-list-style: none;
-align-items: center;
-}
-
-.navbar li {
-position: relative;
-}
-
-.navbar li+li {
-margin-left: 30px;
-}
-
-.navbar a,
-.navbar a:focus {
-display: flex;
-align-items: center;
-justify-content: space-between;
-padding: 0;
-font-family: "Montserrat", sans-serif;
-font-size: 16px;
-font-weight: 400;
-color: rgba(255, 255, 255, 0.7);
-white-space: nowrap;
-}
-
-.navbar a i,
-.navbar a:focus i {
-font-size: 12px;
-line-height: 0;
-margin-left: 5px;
-}
-
-.navbar a:before {
-content: "";
-position: absolute;
-width: 0;
-height: 2px;
-bottom: -4px;
-left: 0;
-background-color: #18d26e;
-visibility: hidden;
-width: 0px;
-
-}
-
-.navbar a:hover:before,
-.navbar li:hover>a:before,
-.navbar .active:before {
-visibility: visible;
-width: 25px;
-}
-
-.navbar a:hover,
-.navbar .active,
-.navbar .active:focus,
-.navbar li:hover>a {
-color: #fff;
-}
-
-/**
-* Mobile Navigation 
-*/
-.mobile-nav-toggle {
-color: #fff;
-font-size: 28px;
-cursor: pointer;
-display: none;
-line-height: 0;
-position: fixed;
-right: 15px;
-top: 15px;
-}
-
-@media (max-width: 991px) {
-.mobile-nav-toggle {
-  display: block;
-}
-
-.navbar ul {
-  display: none;
-}
-}
-
-.navbar-mobile {
-position: fixed;
-overflow: hidden;
-top: 0;
-right: 0;
-left: 0;
-bottom: 0;
-background: rgba(0, 0, 0, 0.9);
-z-index: 999;
-margin-top: 0;
-}
-
-.navbar-mobile .mobile-nav-toggle {
-position: absolute;
-top: 15px;
-right: 15px;
-}
-
-.navbar-mobile ul {
-display: block;
-position: absolute;
-top: 55px;
-right: 15px;
-bottom: 45px;
-left: 15px;
-padding: 10px 0;
-overflow-y: auto;
-border: 2px solid rgba(255, 255, 255, 0.2);
-}
-
-.navbar-mobile li {
-padding: 12px 20px;
-}
-
-.navbar-mobile li+li {
-margin: 0;
-}
-
-.navbar-mobile a,
-.navbar-mobile a:focus {
-font-size: 16px;
-position: relative;
-}
-
-
 
 .sidebar {
 position: fixed; /* Fix position to the viewport */
@@ -449,16 +300,7 @@ overflow-y: auto; /* Enable vertical scrolling if content exceeds height */
 
 }
 
-.scrollable-content {
-margin-left: 80px; /* Add margin to create space between the sidebar and scrollable content */
-padding: 20px; /* Add padding for better spacing */
-overflow-y: auto; /* Enable vertical scrolling if content exceeds height */
-}
 
-/* Additional styles for sidebar content */
-.container {
-width: 100%; /* Ensure container fills the sidebar */
-}
 
 /* Additional styles for main content */
 .col {
@@ -748,3 +590,33 @@ font-size: 15px;
   color: white;
 }
 
+
+/* Style the text to be white */
+.header-project h1,
+.header-project p{
+  color: white;
+}
+
+/* Make the last card bigger */
+.card:last-child {
+  height: 300px; /* Adjust the height as needed */
+}
+
+/* Ensure the card fills its parent container */
+.card-project {
+  height: 100%;
+}
+
+/* Center the text vertically within the card */
+.card-body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+@media (max-width: 992px) {
+  /* Adjust card height for responsiveness */
+  .card:last-child {
+    height: auto;
+  }
+}
