--- a/OnlinePortfolio/templates/resume.html
+++ b/OnlinePortfolio/templates/resume.html
@@ -99,7 +99,7 @@
                   <div class="card-body">
                     <h5 class="card-title">School Projects</h5>
                     <p class="card-text">Collective school projects with different roles i partake </p>
-                    <button class="general_btn" type="button" style="color: white;"><a href="{% url 'base:gallery' %}">Click Me</a></button>
+                    <button class="general_btn" type="button" style="color: white;"><a href="{% url 'base:project' %}">Click Me</a></button>
                   </div>
                 </div>
               </div>
@@ -107,13 +107,11 @@
             <br>
           </div>
           
-          
-            
         </div>
-  
       </div>
     </section><!-- End Resume Section -->
     
+  
     
   </div>
 
