--- a/OnlinePortfolio/templates/gallery.html
+++ b/OnlinePortfolio/templates/gallery.html
@@ -36,7 +36,7 @@ body {
   position: relative;
   max-width: 300px;
   height: 215px;  
-  background-color: #fff;
+  background-color: transparent;
   margin: 30px 10px;
   padding: 20px 15px;
   display: flex;
@@ -84,6 +84,13 @@ body {
 
 .content p{
   color: black;
+  font-size: 20px;
+}
+
+.content h3{
+  color: black;
+  font-size: 25px;
+  padding-top: 10px;
 }
 
 button {
@@ -192,15 +199,6 @@ button {
       </div>
       <div class="card">
         <div class="image">
-          <img src="media/works/skynet.jpg" alt="Placeholder image">
-        </div>
-        <div class="content">
-          <h3>This is content</h3>
-          <p>In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual </p>
-        </div>
-      </div>
-      <div class="card">
-        <div class="image">
           <img src="media/works/fade.jpg" alt="Placeholder image">
         </div>
         <div class="content">
@@ -219,7 +217,7 @@ button {
       </div>
       <div class="card">
         <div class="image">
-          <img src="media/works/Justart.jpg" alt="Placeholder image">
+          <img src="media/works/Luzviminda.jpg" alt="Placeholder image">
         </div>
         <div class="content">
           <h3>This is content</h3>
@@ -228,7 +226,7 @@ button {
       </div> 
       <div class="card">
         <div class="image">
-          <img src="media/works/Justart.jpg" alt="Placeholder image">
+          <img src="media/works/rawr.png" alt="Placeholder image">
         </div>
         <div class="content">
           <h3>This is content</h3>
@@ -237,13 +235,58 @@ button {
       </div> 
       <div class="card">
         <div class="image">
-          <img src="media/works/Justart.jpg" alt="Placeholder image">
+          <img src="media/works/Ricafort_Activity1.png" alt="Placeholder image">
         </div>
         <div class="content">
           <h3>This is content</h3>
           <p>In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual </p>
         </div>
-      </div>     
+      </div>
+      <div class="card">
+        <div class="image">
+          <img src="media/works/Ricafort,Luy_Sportposter.png" alt="Placeholder image">
+        </div>
+        <div class="content">
+          <h3>This is content</h3>
+          <p>In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual </p>
+        </div>
+      </div>
+      <div class="card">
+        <div class="image">
+          <img src="media/works/DTart3.jpg" alt="Placeholder image">
+        </div>
+        <div class="content">
+          <h3>This is content</h3>
+          <p>In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual </p>
+        </div>
+      </div>
+      <div class="card">
+        <div class="image">
+          <img src="media/works/RICAFORT, LESTER LEAND.png" alt="Placeholder image">
+        </div>
+        <div class="content">
+          <h3>This is content</h3>
+          <p>In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual </p>
+        </div>
+      </div> 
+      <div class="card">
+        <div class="image">
+          <img src="media/works/RICAFORT_LOGO.png" alt="Placeholder image">
+        </div>
+        <div class="content">
+          <h3>This is content</h3>
+          <p>In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual </p>
+        </div>
+      </div>
+      <div class="card">
+        <div class="image">
+          <img src="media/works/Ricafort_1stPubmat Layout.png" alt="Placeholder image">
+        </div>
+        <div class="content">
+          <h3>This is content</h3>
+          <p>In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual </p>
+        </div>
+      </div>          
     </div>
   
 
