--- a/OnlinePortfolio/templates/nav.html
+++ b/OnlinePortfolio/templates/nav.html
@@ -1,46 +1,80 @@
-<nav class="navbar navbar-expand-sm navbar-transparent  bg-transparent ">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="javascript:void(0)">Lester Portfolio</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse justify-content-center" id="mynavbar">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'base:home' %}">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'base:about' %}">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'base:resume' %}">Resume</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'base:contact' %}">Contact</a>
-          </li>
-        </ul>
-      </div>
-      <div class="ml-auto">
-        <button type="button">Download CV</button>
-      </div>
+<nav class="navbar navbar-expand-sm navbar-transparent bg-transparent">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="">Lester Portfolio</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar" aria-controls="mynavbar" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-center" id="mynavbar">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'base:home' %}">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'base:about' %}">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'base:resume' %}">Resume</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'base:contact' %}">Contact</a>
+        </li>
+      </ul>
     </div>
-  </nav>
-  <style>
-    button {
-    background-color: transparent; /* Green */
+    <div class="ml-auto">
+      <button type="button">Download CV</button>
+    </div>
+  </div>
+</nav>
+
+<style>
+  /* Default button styles */
+  button {
+    background-color: transparent;
     color: white;
-    padding: 10px 20px; /* Add some padding */
+    padding: 10px 20px;
     text-align: center;
     display: inline-block;
     font-size: 16px;
     margin: 4px 2px;
     box-shadow: 0 5px 20px rgba(0, 0, 0, 0.5);
+    border: none;
   }
 
-    /* Change color on hover */
-    button:hover {
-      background-color: #45a049;
+  /* Change color on hover */
+  button:hover {
+    background-color: #45a049;
   }
 
-  </style>
-  
+  /* Media queries */
+  @media (max-width: 576px) {
+    .navbar-toggler {
+      margin-right: 0;
+      margin-left: auto;
+    }
+    .navbar-collapse {
+      flex-basis: 100%;
+      justify-content: center;
+    }
+    .navbar-nav {
+      flex-direction: column;
+      text-align: center;
+    }
+    .navbar-nav .nav-item {
+      margin-top: 10px;
+    }
+    .ml-auto {
+      margin-left: 0;
+    }
+    button {
+      padding: 8px 16px;
+      font-size: 14px;
+    }
+  }
+
+  @media (min-width: 576px) and (max-width: 992px) {
+    .navbar-nav .nav-item {
+      margin-right: 15px;
+    }
+  }
+
+</style>
